<resources>
    <string name="app_name">SpiroKitForTab</string>
    <string name="time_colon_what" translatable="false">( %1$s )</string>
    <string name="date_to_date" translatable="false">%1$s ~ %2$s</string>
    <string name="state_null" translatable="false">NULL</string>
    <string name="not_applicable" translatable="false">N/A</string>
    <string name="spirokit_title" translatable="false">The SpiroKit</string>
    <string name="app_v" translatable="false">V 1.0</string>
    <string name="decibel" translatable="false">dB</string>
    <string name="meas" translatable="false">meas</string>
    <string name="pred" translatable="false">pred</string>
    <string name="percent" translatable="false">percent</string>
    <string name="fvc" translatable="false">FVC</string>
    <string name="fev1" translatable="false">FEV1</string>
    <string name="fev1per" translatable="false">FEV1%</string>
    <string name="pef" translatable="false">PEF</string>
    <string name="fef2575" translatable="false">FEF25-75%</string>
    <string name="mef25" translatable="false">MEF25%</string>
    <string name="mef50" translatable="false">MEF50%</string>
    <string name="mef75" translatable="false">MEF75%</string>
    <string name="svc" translatable="false">SVC</string>
    <string name="vc" translatable="false">VC</string>
    <string name="ic" translatable="false">IC</string>
    <string name="erv" translatable="false">ERV</string>
    <string name="irv" translatable="false">IRV</string>
    <string name="round_2" translatable="false">%1$.2f</string>
    <string name="with_L" translatable="false">%1$.2f L</string>
    <string name="with_lps" translatable="false">%1$.2f l/s</string>
    <string name="with_per" translatable="false">%1$.2f %2$s</string>
    <string name="with_sec" translatable="false">%1$.2f s</string>
    <string name="float_two" translatable="false">%1$.2f</string>
    <string name="post" translatable="false">POST</string>
    <string name="pre" translatable="false">PRE</string>
    <string name="liter" translatable="false">L</string>
    <string name="liter_per_sec" translatable="false">L/s</string>
    <string name="percentage" translatable="false">%</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="fail_server_response">Failed response\n(%1$s)</string>
    <string name="checkup">Exam</string>
    <string name="user_login">Login</string>
    <string name="user_email">E-mail</string>
    <string name="user_identifier">ID</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="join">Sign up</string>
    <string name="user_join">Sign up</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="request_rule_password">Password must consist 2 letters and numbers(total 6~8 characters)</string>
    <string name="terms_and_conditions">Terms and conditions for use</string>
    <string name="next">Next</string>
    <string name="agree_all_condition">Agree terms and conditions for use</string>
    <string name="patient_list">Patient list</string>
    <string name="latest_meas_date">Latest examed date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="patient_name_search">Search for patient\'s name</string>
    <string name="confirm_patient_delete">Delete it?</string>
    <string name="chart_number">Chart No</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="birth">Birthday</string>
    <string name="human_race">Race</string>
    <string name="start_smoke_date">Take up Smoking date</string>
    <string name="stop_smoke_date">Quit smoking date</string>
    <string name="smoke_amount_day">Daily smoking amount</string>
    <string name="is_smoking">Current smoking</string>
    <string name="smoking">Smoking</string>
    <string name="not_smoking">Not smoking</string>
    <string name="have_smoked">Smoking experience</string>
    <string name="have">Yes</string>
    <string name="have_not">No</string>
    <string name="add_patient">Add patient</string>
    <string name="modify_patient">Modify patient</string>
    <string name="close">Close</string>
    <string name="add">Registration</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="request_input_require_patient_info2">Please enter required information</string>
    <string name="request_input_what">Please input %1$s</string>
    <string name="request_selection_what">Please select %1$s</string>
    <string name="family_doctor">Family doctor</string>
    <string name="selection_family_doctor">Select family doctor</string>
    <string name="checkup_doctor">Staff</string>
    <string name="request_have_not_doctors">Input operator info</string>
    <string name="have_not_what">Not found %1$s</string>
    <string name="date_format_ymd">yyyy-MM-dd</string>
    <string name="select_birth_date">Select birthday</string>
    <string name="select_start_smoke_date">Select take up smoking date</string>
    <string name="select_stop_smoke_date">Select quit smoking date</string>
    <string name="duplicate_hash">Already exist patient</string>
    <string name="request_input_email_or_password">Please input E-mail or password</string>
    <string name="request_input_id_or_password">Please input ID or password</string>
    <string name="request_confirm_email_or_password">Please confirm E-mail or password</string>
    <string name="request_confirm_id_or_password">Please confirm ID or password</string>
    <string name="request_confirm_password">Please confirm password</string>
    <string name="empty_result">Result data will displayed here</string>
    <string name="empty_chart">Result graph will displayed here</string>
    <string name="empty_history">Will be display exam histories here</string>
    <string name="empty_patient">Add patient</string>
    <string name="history">Exam histories</string>
    <string name="question_delete_history">Delete it?</string>
    <string name="question_delete_patient">Delete it?</string>
    <string name="select_history_range">Select period</string>
    <string name="checkup_doctor_is">Staff : %1$s (%2$s)</string>
    <string name="family_doctor_is">Family doctor : %1$s (%2$s)</string>
    <string name="doctor_is">Staff : %1$s (%2$s)\nFamily doctor : %3$s (%4$s)</string>
    <string name="chart_number_is">• Chart No : %1$s</string>
    <string name="_chart_number_is">Chart No : %1$s</string>
    <string name="gender_is">• Gender : %1$s</string>
    <string name="height_is">• Height : %1$d cm</string>
    <string name="weight_is">• Weight : %1$d kg</string>
    <string name="birth_is">• Birth : %1$s</string>
    <string name="human_race_is">• Race : %1$s</string>
    <string name="smoke_start_date_is">• Take up smoking date : %1$s</string>
    <string name="smoke_stop_date_is">• Quit smoking date : %1$s</string>
    <string name="smoking_per_day_is">• Daily smoking amount : %1$s pack</string>
    <string name="smoking_per_day_is_na">• Daily smoking amount : %1$s</string>
    <string name="smoking_now_is">• Current smoking : %1$s</string>
    <string name="please_select_patient">Please select patient</string>
    <string name="please_add_operator">Please add staff first</string>
    <string name="not_sync_permission">Must require permission</string>
    <string name="sync_disabled">Disabled sync</string>
    <string name="not_selected_checkup_doctor">Please check require information</string>
    <string name="fvc_meas">FVC exam</string>
    <string name="pre_save">Save(PRE)</string>
    <string name="post_save">Save(POST)</string>
    <string name="retest">Clear</string>
    <string name="complete">Complete</string>
    <string name="start_meas">Start</string>
    <string name="pause_meas">Pause</string>
    <string name="save_success">Saved it</string>
    <string name="can_not_save_non_data">No data</string>
    <string name="fvc_nothing_result">Will displayed results here</string>
    <string name="connecting">Connecting</string>
    <string name="spirokit_initializing">Preparing</string>
    <string name="spirokit_terminating">Terminating</string>
    <string name="already_connect">Already connecting</string>
    <string name="not_found_saved_device">Can not connect</string>
    <string name="svc_meas">SVC exam</string>
    <string name="svc_nothing_result">Will displayed result here</string>
    <string name="device">Device</string>
    <string name="device_info">Device info</string>
    <string name="scan">Scan</string>
    <string name="do_disconnect">Disconnect</string>
    <string name="do_connect">Connect</string>
    <string name="mac_address">MAC address</string>
    <string name="volume_flow_graph">Volume | Flow graph</string>
    <string name="volume_time_graph">Volume | Time graph</string>
    <string name="n_order_meas">%1$s th exam(%2$s)</string>
    <string name="date_colon_what">Date : %1$s</string>
    <string name="empty_patient_select">Please select patient</string>
    <string name="empty_operators">Please add staff before use</string>
    <string name="empty_patients">Please add patient for exam</string>
    <string name="empty_cal">No data, Do exam</string>
    <string name="go_to_add_operator">Add operator</string>
    <string name="go_to_add_patient">Add patient</string>
    <string name="doctor">Doctor</string>
    <string name="request_empty_info">Please input all information</string>
    <string name="complete_user_join">Sign up complete</string>
    <string name="request_input_require_patient_info">Please input require data</string>
    <string name="state_disconnect">Not connected</string>
    <string name="state_connect">Connected</string>
    <string name="device_name_modify">Modify device name</string>
    <string name="current_name">Current name</string>
    <string name="modify_name">New name</string>
    <string name="setting">Setting</string>
    <string name="app_version">App version</string>
    <string name="server_sync">Sync</string>
    <string name="server_sync_waiting">Waiting response</string>
    <string name="agree_enable_sync">Turn on sync?</string>
    <string name="agree_disable_sync">Turn off sync?</string>
    <string name="not_available_ble">Not available Bluetooth service this device</string>
    <string name="modify_device_name">Modify device name</string>
    <string name="management_medical_staff">Staff management</string>
    <string name="question_delete_staff">Delete it?</string>
    <string name="additional">Add</string>
    <string name="failed_server_connection">Server connection failed\n(%1$s)</string>
    <string name="already_scanning">Already scanning</string>
    <string name="info_modify_name">Reboot to device for new name</string>
    <string name="connect_with_what">Connect to %1$s</string>
    <string name="question_disconnect">Disconnect?</string>
    <string name="logout">Logout</string>
    <string name="sync_preparing_office">Preparing office</string>
    <string name="sync_preparing_operators">Preparing staff info</string>
    <string name="sync_preparing_patients">preparing patients info</string>
    <string name="disconnected_with_device">Disconnected to device</string>
    <string name="success_sync">Sync success</string>
    <string name="connected_with_device">Connected to device</string>
    <string name="must_be_enable_ble">Blueooth is required</string>
    <string name="scan_info">Please info scan</string>
    <string name="can_not_insert_same_name_in_work">Already exist</string>
    <string name="question_connect">Connected to %1$s ?</string>
</resources>