<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".join.JoinUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_bar_user_join"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:elevation="10dp"
        >

        <ImageButton
            android:id="@+id/img_btn_back_user_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_30_black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"

            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_btn_back_user_join"

            android:text="@string/user_join"
            android:layout_marginHorizontal="10dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center_vertical|center_horizontal"
        >

        <EditText
            android:id="@+id/et_nickname_join"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:background="@drawable/text_field_inner_shadow_white"

            android:paddingHorizontal="10dp"

            android:layout_marginHorizontal="50dp"

            android:hint="@string/nickname"
            android:inputType="textEmailAddress"

            />


        <EditText
            android:id="@+id/et_email_join"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:background="@drawable/text_field_inner_shadow_white"

            android:paddingHorizontal="10dp"

            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"

            android:hint="@string/user_email"
            android:inputType="textEmailAddress"

            />

        <EditText
            android:id="@+id/et_password_join"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:background="@drawable/text_field_inner_shadow_white"

            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="50dp"

            android:layout_marginTop="20dp"

            android:hint="@string/user_password"
            android:inputType="textPassword"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/request_rule_password"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="3dp"
            android:textSize="10sp"
            />

        <EditText
            android:id="@+id/et_password_confirm_join"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:background="@drawable/text_field_inner_shadow_white"

            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="50dp"

            android:layout_marginTop="20dp"

            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            />

        <android.widget.Button
            android:id="@+id/btn_join_user"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/text_field_background_round_white"
            android:backgroundTint="@color/primary_color"

            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"

            android:textColor="@color/white"
            android:text="등록"
            android:elevation="10dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>