<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_title_selection_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/modify_device_name"

        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="70dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_name"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="10dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:background="@drawable/text_out_line_black"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            >

            <TextView
                android:id="@+id/tv_current_device_name_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NAME"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_name"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="10dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:background="@drawable/text_field_inner_shadow_white"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            >

            <TextView
                android:id="@+id/tv_modify_device_name_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NAME"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />

            <EditText
                android:id="@+id/et_modify_device_name_number_dialog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                app:layout_constraintStart_toEndOf="@id/tv_modify_device_name_dialog"
                app:layout_constraintEnd_toEndOf="parent"

                android:inputType="number"
                android:textSize="15sp"
                android:textColor="@color/gray_dark"

                android:background="@android:color/transparent"

                android:maxLength="2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_modify_name"
        android:textAlignment="center"
        android:textColor="@color/gray"

        android:layout_marginVertical="10dp"
        />


    <LinearLayout
        android:id="@+id/linear_button_box_selection_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        >

        <android.widget.Button
            android:id="@+id/btn_reject_name_modify_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"

            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"

            android:text="@string/cancel"
            android:textColor="@color/gray_text"
            android:textSize="15sp"

            android:paddingHorizontal="70dp"
            android:paddingVertical="12dp"
            android:elevation="10dp"
            android:layout_margin="10dp"

            android:fontFamily="@font/nanum_barun_gothic_light"
            />

        <android.widget.Button
            android:id="@+id/btn_agree_name_modify_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"

            android:background="@drawable/button_shape"
            android:backgroundTint="@color/primary_color"

            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_margin="10dp"

            android:paddingHorizontal="70dp"
            android:paddingVertical="12dp"
            android:elevation="10dp"

            android:fontFamily="@font/nanum_barun_gothic_light"
            />

    </LinearLayout>






</LinearLayout>