<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingActivity"
    android:background="@color/primary_color"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary_color"
        android:elevation="10dp"
        >

        <ImageButton
            android:id="@+id/img_btn_back_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_30_white"
            android:background="?attr/selectableItemBackgroundBorderless"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/times"

            android:textColor="@color/white"
            android:text="@string/spirokit_title"
            android:textSize="30sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_line_center_setting"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/gray_dark"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_bar_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_gothic_bold"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@id/card_scan_area_setting"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/card_scan_area_setting"
        app:layout_constraintEnd_toEndOf="@id/card_scan_area_setting"

        android:text="@string/device"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_scan_area_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/view_line_center_setting"
        app:layout_constraintBottom_toBottomOf="@id/view_line_center_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view_line_center_setting"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_gothic"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/device_info"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="15dp"
                    />

                <android.widget.Button
                    android:id="@+id/btn_start_scan_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/primary_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nanum_gothic"
                    android:textSize="15sp"
                    android:text="@string/scan"
                    />

                <TextView
                    android:id="@+id/tv_mac_address_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_gothic"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_start_scan_setting"
                    android:layout_marginEnd="20dp"

                    android:text="@string/state_disconnect"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic"
                android:textColor="@color/gray_dark"
                android:textSize="15sp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/scan_info"
                android:paddingVertical="10dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_gothic"
                    android:textSize="15sp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:text="@string/connect_device"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_gothic"
                    android:textSize="15sp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="@string/mac_address"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_gothic"
                    android:textSize="15sp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="@string/unit_decibel"
                    android:layout_marginEnd="10dp"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/view_line_center_setting"
        app:layout_constraintBottom_toBottomOf="@id/view_line_center_setting"
        app:layout_constraintStart_toEndOf="@id/view_line_center_setting"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="100dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <include
                layout="@layout/item_setting_auto_pairing"
                />

            <include
                layout="@layout/item_setting_sleep_mode"
                />

            <include
                layout="@layout/item_setting_user"
                />

            <include
                layout="@layout/item_setting_app_version"
                />

            <include
                layout="@layout/item_setting_manual"
                />

            <include
                layout="@layout/item_setting_server_sync"
                />



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>